refactoring related to misuse of Optional