@@ -1,9 +1,5 @@
 package org.minijpa.sql.model;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -13,6 +9,10 @@ import org.minijpa.sql.model.condition.ConditionType;
 import org.minijpa.sql.model.function.Locate;
 import org.minijpa.sql.model.function.Trim;
 import org.minijpa.sql.model.function.TrimType;
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 public class PostgresSqlStatementGeneratorTest {
     private static final SqlStatementGenerator sqlStatementGenerator = new PostgresSqlStatementGenerator();
@@ -28,7 +28,7 @@ public class PostgresSqlStatementGeneratorTest {
         Column idColumn = new Column("id");
         Column nameColumn = new Column("first_name");
 
-        List<Value> values = Arrays.asList(new TableColumn(fromTable, idColumn));
+        List<Value> values = List.of(new TableColumn(fromTable, idColumn));
         BinaryCondition binaryCondition = new BinaryCondition.Builder(ConditionType.EQUAL)
                 .withLeft(new TableColumn(fromTable, nameColumn)).withRight("'Sam'").build();
         List<Condition> conditions = Arrays.asList(binaryCondition);
@@ -46,7 +46,7 @@ public class PostgresSqlStatementGeneratorTest {
         Column surnameColumn = new Column("last_name");
 
         SqlInsert sqlInsert = new SqlInsert(FromTable.of("citizen"), Arrays.asList(idColumn, nameColumn, surnameColumn),
-                false, false, Optional.empty());
+                false, false, null);
         Assertions.assertEquals("insert into citizen (id,first_name,last_name) values (?,?,?)",
                 sqlStatementGenerator.export(sqlInsert));
     }
@@ -59,8 +59,8 @@ public class PostgresSqlStatementGeneratorTest {
         BinaryCondition binaryCondition = new BinaryCondition.Builder(ConditionType.EQUAL)
                 .withLeft(new TableColumn(fromTable, idColumn)).withRight(456).build();
 
-        SqlUpdate sqlUpdate = new SqlUpdate(fromTable, Arrays.asList(new TableColumn(fromTable, surnameColumn)),
-                Optional.of(binaryCondition));
+        SqlUpdate sqlUpdate = new SqlUpdate(fromTable, List.of(new TableColumn(fromTable, surnameColumn)),
+                binaryCondition);
         Assertions.assertEquals("update citizen set last_name = ? where id = 456",
                 sqlStatementGenerator.export(sqlUpdate));
     }
@@ -71,7 +71,7 @@ public class PostgresSqlStatementGeneratorTest {
         Column nameColumn = new Column("first_name");
         BinaryCondition binaryCondition = new BinaryCondition.Builder(ConditionType.EQUAL)
                 .withLeft(new TableColumn(fromTable, nameColumn)).withRight("'Sam'").build();
-        SqlDelete sqlDelete = new SqlDelete(fromTable, Optional.of(binaryCondition));
+        SqlDelete sqlDelete = new SqlDelete(fromTable, binaryCondition);
         Assertions.assertEquals("delete from citizen where first_name = 'Sam'",
                 sqlStatementGenerator.export(sqlDelete));
     }
@@ -82,9 +82,9 @@ public class PostgresSqlStatementGeneratorTest {
         Column nameColumn = new Column("first_name");
 
         SelectItem selectItem = new SelectItem(new Locate("'a'", new TableColumn(fromTable, nameColumn)),
-                Optional.of("position"));
+                "position");
         SqlSelectBuilder sqlSelectBuilder = new SqlSelectBuilder();
-        SqlSelect sqlSelect = sqlSelectBuilder.withFromTable(fromTable).withValues(Arrays.asList(selectItem)).build();
+        SqlSelect sqlSelect = sqlSelectBuilder.withFromTable(fromTable).withValues(List.of(selectItem)).build();
         Assertions.assertEquals("select POSITION('a' IN c.first_name) AS position from citizen AS c",
                 sqlStatementGenerator.export(sqlSelect));
     }
@@ -110,9 +110,9 @@ public class PostgresSqlStatementGeneratorTest {
 
         SelectItem selectItem = new SelectItem(
                 new Trim(new TableColumn(fromTable, nameColumn), Optional.of(TrimType.BOTH), "'\"'"),
-                Optional.of("name"));
+                "name");
         SqlSelectBuilder sqlSelectBuilder = new SqlSelectBuilder();
-        SqlSelect sqlSelect = sqlSelectBuilder.withFromTable(fromTable).withValues(Arrays.asList(selectItem)).build();
+        SqlSelect sqlSelect = sqlSelectBuilder.withFromTable(fromTable).withValues(List.of(selectItem)).build();
         Assertions.assertEquals("select TRIM(BOTH '\"' FROM c.first_name) AS name from citizen AS c",
                 sqlStatementGenerator.export(sqlSelect));
     }
